--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,5 +1,7 @@
 {
     "*.ts": [
-        "eslint 'src/**'"
+        "yarn eslint src/** --fix",
+        "yarn test:staged",
+        "git add"
     ]
 }
